--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
+      - main
       - new_260204
 
 permissions:
@@ -21,6 +22,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+
+      - name: List files (DEBUG)
+        run: ls -R
 
       - name: Install dependencies
         run: npm install
